--- a/css/suits.css
+++ b/css/suits.css
@@ -2,6 +2,8 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  /* overflow-x: hidden; */
+  /* outline: 1px solid red; */
 }
 
 html {
@@ -13,6 +15,7 @@ body {
   font-family: 'Montserrat', sans-serif;
   background: #fdfdfc;
   color: #333;
+  overflow-x: hidden;
 }
 
 
@@ -21,6 +24,7 @@ body {
   border-bottom: 1px solid #ddd;
   padding: 20px 30px;
   position: relative;
+  /* overflow-x: hidden; */
 }
 
 .nav-top {
@@ -135,13 +139,24 @@ body {
 /* Responsive */
 @media (max-width: 768px) {
   .hamburger {
-    display: block; /* Show hamburger */
+    display: block;
+    margin-left: -2rem; 
   }
  .right-icons {
-    position: absolute;
-    right: 20px;
-  }
+  position: absolute;
+  /* right: 0.2rem; smaller and safer */
+  margin-right: .5rem ; 
+  /* font-size: small; */
+  height: 5px;
+  width: 5px;
+}
+.cart-btn{
+  font-size: 10px;
+}
 
+.cart-btn i,span{
+  font-size: 10px;
+}
   .login-link {
     display: none; /* Hide login link */
   }
@@ -164,6 +179,7 @@ body {
     display: flex;
   }
 }
+
 
 /* top section  */
 .collection-hero {
